--- a/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
+++ b/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
@@ -1,9 +1,9 @@
-.driverProfileBasicInformationBody {
+.basicInformationBody {
     margin-bottom: 150px;
     position: relative;
 }
 
-.driverProfileBasicInformationBodyTopImg {
+.basicInformationBodyTopImg {
     position: absolute;
     z-index: 2;
     display: flex;
@@ -20,11 +20,11 @@
     transition: 0.5s ease;
 }
 
-.driverProfileBasicInformationBodyTopImgHover {
+.basicInformationBodyTopImgHover {
     cursor: pointer;
 }
 
-.driverProfileBasicInformationBodyTopImgHover:hover .driverProfileBasicInformationBodyTopImg {
+.basicInformationBodyTopImgHover:hover .basicInformationBodyTopImg {
     opacity: 1;
 }
 
@@ -34,7 +34,15 @@
     margin-left: 15px;
 }
 
-.bodyTopDriverInfoRide div p {
+.bodyTopDriverInfo p {
+    color: #304269;
+    font-weight: 500;
+    font-size: 24px;
+    margin: 0;
+}
+
+.bodyTopDriverInfoPlace p,
+.bodyTopDriverInfoRide p {
     color: #304269;
     font-weight: 400;
     font-size: 14px;
@@ -46,19 +54,19 @@
     font-size: 31px;
 }
 
-.driverProfileBasicInformationBodyBottom {
+.basicInformationBodyBottom {
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
 }
 
-.driverProfileBasicInformationBodyBottomHeader {
+.basicInformationBodyBottomHeader {
     height: 55px;
     border-bottom: 1px solid #ccc;
     line-height: 55px;
     padding-left: 10px;
 }
 
-.driverProfileBasicInformationBodyBottomHeader p {
+.basicInformationBodyBottomHeader p {
     color: #304269;
     font-weight: 400;
     font-size: 16px;
@@ -68,7 +76,7 @@
     cursor: pointer;
 }
 
-.driverProfileBasicInformationBodyBottomContent p {
+.basicInformationBodyBottomContent p {
     color: #999;
     font-weight: 500;
     font-size: 14px;
@@ -77,7 +85,7 @@
     line-height: 40px;
 }
 
-.driverProfileBasicInformationBodyBottomContent input {
+.basicInformationBodyBottomContent input {
     color: #333;
     font-weight: 400;
     font-size: 14px;
@@ -89,29 +97,24 @@
     transition: all 0.3s;
 }
 
-
-/* .driverProfileBasicInformationBodyBottomContent :nth-child(6) input {
-    max-width: 195px;
-} */
-
-.driverProfileBasicInformationBodyBottomContent input::placeholder {
+.basicInformationBodyBottomContent input::placeholder {
     color: #333;
     font-weight: 400;
     font-size: 14px;
 }
 
-.driverProfileBasicInformationBodyBottomContent textarea:hover,
-.driverProfileBasicInformationBodyBottomContent textarea:focus,
-.driverProfileBasicInformationBodyBottomContent select:hover,
-.driverProfileBasicInformationBodyBottomContent select:focus,
-.driverProfileBasicInformationBodyBottomContent input:hover,
-.driverProfileBasicInformationBodyBottomContent input:focus {
+.basicInformationBodyBottomContent textarea:hover,
+.basicInformationBodyBottomContent textarea:focus,
+.basicInformationBodyBottomContent select:hover,
+.basicInformationBodyBottomContent select:focus,
+.basicInformationBodyBottomContent input:hover,
+.basicInformationBodyBottomContent input:focus {
     border-color: #304269;
     text-decoration: none;
     outline: #304269;
 }
 
-.driverProfileBasicInformationBodyBottomContent select {
+.basicInformationBodyBottomContent select {
     width: 33.3%;
     min-height: 40px;
     background: none;
@@ -130,18 +133,7 @@
     transition: all 0.3s;
 }
 
-
-/* .driverProfileBasicInformationBodyBottomContent :nth-child(6) select {
-    max-width: 195px;
-    margin-right: 10px;
-} */
-
-
-/* .driverProfileBasicInformationBodyBottomContent :nth-child(2) :nth-child(7) {
-    max-width: 400px;
-} */
-
-.driverProfileBasicInformationBodyBottomContent textarea {
+.basicInformationBodyBottomContent textarea {
     margin: 5px 0;
     min-height: 150px;
     border-radius: 5px;
@@ -150,7 +142,7 @@
     transition: all 0.3s;
 }
 
-.driverProfileBasicInformationBodyBottomContent button {
+.basicInformationBodyBottomContent button {
     max-width: 250px;
     max-height: 40px;
     text-align: center;
@@ -163,30 +155,30 @@
     margin: 10px 0;
 }
 
-.driverProfileBasicInformationBodyBottomContent button:hover {
+.basicInformationBodyBottomContent button:hover {
     background: #f60;
 }
 
-.driverProfileBasicInformationBodyBottomContent button:focus {
+.basicInformationBodyBottomContent button:focus {
     outline: none;
 }
 
 @media (max-width: 768px) {
-    .driverProfileBasicInformationBodyBottom {
+    .basicInformationBodyBottom {
         box-shadow: none;
     }
-    .driverProfileBasicInformationBodyBottomContent input,
-    .driverProfileBasicInformationBodyBottomContent select,
-    .driverProfileBasicInformationBodyBottomContent textarea {
+    .basicInformationBodyBottomContent input,
+    .basicInformationBodyBottomContent select,
+    .basicInformationBodyBottomContent textarea {
         border: none;
         border-bottom: 1px solid #ccc;
     }
-    .driverProfileBasicInformationBodyBottomContent textarea:hover,
-    .driverProfileBasicInformationBodyBottomContent textarea:focus,
-    .driverProfileBasicInformationBodyBottomContent select:hover,
-    .driverProfileBasicInformationBodyBottomContent select:focus,
-    .driverProfileBasicInformationBodyBottomContent input:hover,
-    .driverProfileBasicInformationBodyBottomContent input:focus {
+    .basicInformationBodyBottomContent textarea:hover,
+    .basicInformationBodyBottomContent textarea:focus,
+    .basicInformationBodyBottomContent select:hover,
+    .basicInformationBodyBottomContent select:focus,
+    .basicInformationBodyBottomContent input:hover,
+    .basicInformationBodyBottomContent input:focus {
         border-color: #304269;
         border-width: 2px;
         text-decoration: none;
