--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -1,4 +1,4 @@
-.driverProfileNavigationBody {
+.navigationBody {
     line-height: 40px;
     margin-top: 40px;
     margin-bottom: 30px;
@@ -6,7 +6,7 @@
     border-bottom: 1px solid #ccc;
 }
 
-.driverProfileNavigationBody p {
+.navigationBody p {
     cursor: pointer;
     height: 40px;
     margin-right: 30px;
@@ -16,12 +16,12 @@
     color: #304269;
 }
 
-.driverProfileNavigationBody p:hover {
+.navigationBody p:hover {
     color: #f60;
     border-bottom: 3px solid #f60;
 }
 
-.driverProfileNavigationBodyActive {
+.navigationBodyActive {
     color: #f60 !important;
     border-bottom: 3px solid #f60 !important;
 }
