--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
@@ -1,4 +1,4 @@
-.driverProfileTripSettingsBody {
+.tripSettingsBody {
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     margin-top: 30px;
@@ -10,39 +10,39 @@
 
 /* Content Bigin */
 
-.driverProfileTripSettingsContent {
+.tripSettingsContent {
     padding: 30px 25px 20px 25px;
     transition: all 0.3s;
 }
 
-.driverProfileTripSettingsContent div {
+.tripSettingsContent div {
     margin-bottom: 15px;
 }
 
-.driverProfileTripSettingsContent p {
+.tripSettingsContent p {
     font-weight: 500;
     font-size: 14px;
     color: #999;
     margin-bottom: 0px;
 }
 
-.driverProfileTripSettingsContent select {
+.tripSettingsContent select {
     font-weight: 400;
     font-size: 14px;
     color: #333;
 }
 
-div.driverProfileTripSettingsContentTitle {
+div.tripSettingsContentTitle {
     margin-bottom: 30px;
 }
 
-.driverProfileTripSettingsContentTitle p {
+.tripSettingsContentTitle p {
     font-weight: 400;
     font-size: 14px;
     color: #304269;
 }
 
-.driverProfileTripSettingsContent input {
+.tripSettingsContent input {
     color: #333;
     font-weight: 400;
     font-size: 14px;
@@ -54,7 +54,7 @@ div.driverProfileTripSettingsContentTitle {
     transition: all 0.3s;
 }
 
-.driverProfileTripSettingsContent select {
+.tripSettingsContent select {
     min-width: 400px;
     min-height: 40px;
     background: none;
@@ -73,24 +73,24 @@ div.driverProfileTripSettingsContentTitle {
     transition: all 0.3s;
 }
 
-.driverProfileTripSettingsContent select:hover,
-.driverProfileTripSettingsContent select:focus,
-.driverProfileTripSettingsContent input:hover,
-.driverProfileTripSettingsContent input:focus {
+.tripSettingsContent select:hover,
+.tripSettingsContent select:focus,
+.tripSettingsContent input:hover,
+.tripSettingsContent input:focus {
     border-color: #304269;
     text-decoration: none;
     outline: #304269;
 }
 
-div.driverProfileTripSettingsContentAddCity:nth-last-child(2) {
+div.tripSettingsContentAddCity:nth-last-child(2) {
     margin-bottom: 30px;
 }
 
-div.driverProfileTripSettingsContentAddCity p {
+div.tripSettingsContentAddCity p {
     cursor: pointer;
 }
 
-.driverProfileTripSettingsContentDeletButton {
+.tripSettingsContentDeletButton {
     font-weight: 400;
     font-size: 14px;
     color: #999;
@@ -98,12 +98,12 @@ div.driverProfileTripSettingsContentAddCity p {
     transition: all 0.3s;
 }
 
-div.driverProfileTripSettingsContentAddCity p:hover,
-.driverProfileTripSettingsContentDeletButton:hover {
+div.tripSettingsContentAddCity p:hover,
+.tripSettingsContentDeletButton:hover {
     color: #f60;
 }
 
-.driverProfileTripSettingsContent button {
+.tripSettingsContent button {
     min-width: 250px;
     min-height: 40px;
     text-align: center;
@@ -117,11 +117,11 @@ div.driverProfileTripSettingsContentAddCity p:hover,
     transition: all 0.3s;
 }
 
-.driverProfileTripSettingsContent button:hover {
+.tripSettingsContent button:hover {
     background: #f60;
 }
 
-.driverProfileTripSettingsContent button:focus {
+.tripSettingsContent button:focus {
     outline: none;
 }
 
@@ -129,25 +129,25 @@ div.driverProfileTripSettingsContentAddCity p:hover,
 /* Content End */
 
 @media (max-width: 768px) {
-    .driverProfileTripSettingsBody {
+    .settingsBody {
         box-shadow: none;
     }
-    .driverProfileTripSettingsContent input,
-    .driverProfileTripSettingsContent select {
+    .tripSettingsContent input,
+    .tripSettingsContent select {
         border: none;
         border-bottom: 1px solid #ccc;
     }
-    .driverProfileTripSettingsContent select:hover,
-    .driverProfileTripSettingsContent select:focus,
-    .driverProfileTripSettingsContent input:hover,
-    .driverProfileTripSettingsContent input:focus {
+    .tripSettingsContent select:hover,
+    .tripSettingsContent select:focus,
+    .tripSettingsContent input:hover,
+    .tripSettingsContent input:focus {
         border-color: #304269;
         border-width: 2px;
         text-decoration: none;
         outline: #304269;
         border-radius: 0px;
     }
-    .driverProfileTripSettingsContentDeletButton {
+    .tripSettingsContentDeletButton {
         text-align: right;
     }
 }
