--- a/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
+++ b/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
@@ -163,6 +163,12 @@
     outline: none;
 }
 
+.bottomContentNote p {
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 15px;
+}
+
 @media (max-width: 768px) {
     .basicInformationBodyBottom {
         box-shadow: none;
