--- a/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
+++ b/src/components/drivers/DriversBody/DriversProperties/DriversProperties.css
@@ -17,7 +17,7 @@
 .drivers_properties_text {
     height: 100%;
     font-size: 9pt;
-    color: #686868686868;
+    color: #686868;
     font-weight: 400;
     line-height: 30px;
     text-align: left;
