--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
@@ -135,6 +135,7 @@ div.tripSettingsContentAddCity p:hover,
     .tripSettingsContent input,
     .tripSettingsContent select {
         border: none;
+        border-radius: 0px;
         border-bottom: 1px solid #ccc;
     }
     .tripSettingsContent select:hover,
