--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -263,6 +263,7 @@ div.tourContentCheckbox {
     .tourContent input,
     .tourContent select {
         border: none;
+        border-radius: 0px;
         border-bottom: 1px solid #ccc;
     }
     .tourContent textarea:hover,
