--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,9 +1,13 @@
 .home_window {
-    background: url(bachground.jpg) 100% 100% no-repeat;
+    background: url(bg.jpg) 100% 100% no-repeat;
     background-size: cover;
 }
 
-.home_header {}
+.homeHeader {
+    width: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
 
 .home_block {
     max-width: 1200px;
