--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -165,6 +165,7 @@ p.filledCardInformationNameCarEdit:hover {
     min-width: 305px;
     min-height: 200px;
     margin-right: 20px;
+    margin-left: 20px;
     margin-top: 30px;
     border-radius: 5px;
     background: #ccc;
@@ -345,6 +346,7 @@ p.filledCardInformationNameCarEdit:hover {
 @media (max-width: 768px) {
     .carAddNewCar {
         box-shadow: none;
+        margin-left: 0px;
     }
     .carAddNewCarInformation input,
     .carAddNewCarInformation select {
@@ -368,6 +370,7 @@ p.filledCardInformationNameCarEdit:hover {
     .carAddNewCarPhotoCar {
         margin-top: 0px;
         margin-right: 0px;
+        margin-left: 0px;
     }
 }
 
