--- a/src/components/driverProfileRegistration/DriverProfileSettings.css
+++ b/src/components/driverProfileRegistration/DriverProfileSettings.css
@@ -11,6 +11,7 @@
     min-height: 40px;
     border-bottom: 1px solid #ccc;
     line-height: 40px;
+    padding-left: 20px;
 }
 
 .driverProfilesettingsBodyTitle p {
@@ -20,6 +21,11 @@
     color: #304269;
     margin-bottom: 0px;
     padding-left: 10px;
+}
+
+.driverProfileSettingsContent {
+    margin-left: 10px;
+    margin-top: 20px;
 }
 
 .driverProfileSettingsContent p {
