--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
@@ -11,7 +11,7 @@
 /* Content Bigin */
 
 .tripSettingsContent {
-    padding: 30px 25px 20px 25px;
+    padding: 30px 20px 20px 20px;
     transition: all 0.3s;
 }
 
@@ -129,7 +129,7 @@ div.tripSettingsContentAddCity p:hover,
 /* Content End */
 
 @media (max-width: 768px) {
-    .settingsBody {
+    .tripSettingsBody {
         box-shadow: none;
     }
     .tripSettingsContent input,
