--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -80,7 +80,7 @@
     font-size: 14px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    padding-left: 10px;
+    padding-left: 10px !important;
     min-height: 40px;
     transition: all 0.3s;
 }
@@ -196,7 +196,7 @@ div.tourContentCheckbox {
     width: 100%;
     max-height: 75px;
     border-radius: 5px;
-    padding-left: 10px;
+    padding-left: 10px !important;
     border: 1px solid #ccc;
     transition: all 0.3s;
 }
