--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -13,19 +13,15 @@ html {
     max-width: 1200px;
 }
 
-
-/* .footerButtons {
-
-} */
-
 .footerButtons_button {
     border: none;
     text-decoration: none;
     outline: none;
     background: #304269;
     color: #fff;
+    font-family: "Roboto";
     font-weight: 400;
-    font-size: 10.5pt;
+    font-size: 14px;
     cursor: pointer;
 }
 
@@ -53,3 +49,91 @@ html {
 .footerButtonUp:hover {
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.4);
 }
+
+
+/* Footer Mobaile Bigin */
+
+.footerMobile {
+    min-height: 56px;
+    box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, 0.2);
+}
+
+.foterMobaileItem {
+    cursor: pointer;
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 10px;
+    color: #666;
+    margin-bottom: 5px;
+}
+
+.footerMobileIconTours {
+    width: 20px;
+    height: 20px;
+    margin-bottom: 5px;
+    background: url(./pictures/front-bus-Gray.svg) 100% 100% no-repeat;
+    background-size: contain;
+}
+
+.footerMobileIconTours:hover {
+    background: url(./pictures/front-bus-Orange.svg) 100% 100% no-repeat;
+    background-size: contain;
+}
+
+.footerMobileIconTours:hover~.footerMobileTextTours {
+    color: #f60;
+}
+
+.footerMobileIconRoutes {
+    width: 20px;
+    height: 20px;
+    margin-bottom: 5px;
+    background: url(./pictures/locationGray.svg) 100% 100% no-repeat;
+    background-size: contain;
+}
+
+.footerMobileIconRoutes:hover {
+    background: url(./pictures/locationOrange.svg) 100% 100% no-repeat;
+    background-size: contain;
+}
+
+.footerMobileIconRoutes:hover~.footerMobileTextRoutes {
+    color: #f60;
+}
+
+.footerMobileIconPlaces {
+    width: 20px;
+    height: 20px;
+    margin-bottom: 5px;
+    background: url(./pictures/rate-star-Gray.svg) 100% 100% no-repeat;
+    background-size: contain;
+}
+
+.footerMobileIconPlaces:hover {
+    background: url(./pictures/rate-star-Orange.svg) 100% 100% no-repeat;
+    background-size: contain;
+}
+
+.footerMobileIconPlaces:hover~.footerMobileTextPlaces {
+    color: #f60;
+}
+
+.footerMobileIconProfile {
+    width: 20px;
+    height: 20px;
+    margin-bottom: 5px;
+    background: url(./pictures/man-user-Gray.svg) 100% 100% no-repeat;
+    background-size: contain;
+}
+
+.footerMobileIconProfile:hover {
+    background: url(./pictures/man-user-Orange.svg) 100% 100% no-repeat;
+    background-size: contain;
+}
+
+.footerMobileIconProfile:hover~.footerMobileTextProfile {
+    color: #f60;
+}
+
+
+/* Footer Mobaile End */
