--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -5,6 +5,7 @@
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     transition: all 0.3s;
+    cursor: pointer;
 }
 
 .filledCard:hover {
